// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware logger should logging on successfully build in multi-compiler mode should logging 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /static-one/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware logger should logging warnings in multi-compiler mode should logging 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /static-one/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
]
`;
